Revert "Burn in candidate for 23.7.3 (#5906)"
This reverts commit ed9d80e10e6c5a997e2b855660709de92f85c3db.

Signed-off-by: Simon Dudley <simon.dudley@consensys.net>